# NTOU_FreeGLUT_Beginner_Template

./: .gitignore  CMakeLists.txt
src/: main.cpp
